[package]
name = "slog-dtrace"
version = "0.2.0"
authors = ["Benjamin Naecker <ben@oxide.computer>"]
edition = "2018"
description = "Forward slog messages to DTrace"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/slog-dtrace.git"

[dependencies]
serde = "1"
serde_json = "1"
slog = "2"
chrono = { version = "0.4", features = [ "serde" ] }
usdt = "0.3.2"

[dev-dependencies]
slog-async = "2"
slog-term = "2"
subprocess = "0.2"

[build-dependencies]
version_check = "0.9.4"
